[project]
name = "regreddit-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-redis>=7.0.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "strawberry-graphql-django>=0.86.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
